--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -14,7 +14,13 @@ import {Overline, Body} from "../typography";
 
 import HeroWordmark from "./HeroWordmark.astro";
 
+/**
+ * Props for the Hero component.
+ */
 interface Props {
+  /**
+   * Additional CSS classes.
+   */
   class?: string;
 }
 
