--- a/src/components/hero/HeroWordmark.astro
+++ b/src/components/hero/HeroWordmark.astro
@@ -12,7 +12,13 @@ import {LARGE_SHEEN} from "../../config/sheen";
 
 import {SheenText} from "../typography";
 
+/**
+ * Props for the HeroWordmark component.
+ */
 interface Props {
+  /**
+   * Additional CSS classes.
+   */
   class?: string;
 }
 
