--- a/src/components/navigation/NavLink.astro
+++ b/src/components/navigation/NavLink.astro
@@ -7,8 +7,18 @@
  * Automatically highlights when on the current page using aria-current.
  */
 
+/**
+ * Props for the NavLink component.
+ */
 interface Props {
+  /**
+   * Link destination URL.
+   */
   href: string;
+
+  /**
+   * Additional CSS classes.
+   */
   class?: string;
 }
 
