--- a/src/components/blog/PostTags.astro
+++ b/src/components/blog/PostTags.astro
@@ -7,7 +7,13 @@
 
 import {Overline} from "../typography";
 
+/**
+ * Props for the PostTags component.
+ */
 interface Props {
+  /**
+   * List of tags to display.
+   */
   tags: string[];
 }
 
