refactor: improve JSON-LD and update site metadata

--- a/src/components/blog/BlogList.astro
+++ b/src/components/blog/BlogList.astro
@@ -8,7 +8,7 @@
 
 import {formatDate} from "../../utils/format-date";
 
-import {Overline, Body} from "../typography";
+import {Body, Overline} from "../typography";
 
 import BlogListItem from "./BlogListItem.astro";
 
