--- a/src/components/blog/BlogListItem.astro
+++ b/src/components/blog/BlogListItem.astro
@@ -9,7 +9,7 @@
 import {MEDIUM_SHEEN} from "../../config/sheen";
 import {formatDate} from "../../utils/format-date";
 
-import {SheenText, Caption} from "../typography";
+import {Caption, SheenText} from "../typography";
 
 /**
  * Props for the BlogListItem component.
