--- a/src/components/hero/Hero.astro
+++ b/src/components/hero/Hero.astro
@@ -10,7 +10,7 @@
 import {NAV_LINKS} from "../../config/navigation";
 
 import {Nav} from "../navigation";
-import {Overline, Body} from "../typography";
+import {Body, Overline} from "../typography";
 
 import HeroWordmark from "./HeroWordmark.astro";
 
