--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -125,7 +125,7 @@ const {
       updatedDate={updatedDate}
       tags={tags}
     />
-    <JSONLD type="WebSite" />
+    <JSONLD type="Person" />
 
     <!-- Preload critical fonts -->
     <link
