refactor: inline logo lockup refinements

--- a/src/components/typography/Body.astro
+++ b/src/components/typography/Body.astro
@@ -18,7 +18,8 @@ import type {BaseTypographyProps} from "./types";
 /**
  * Props for the Body component.
  */
-interface Props extends BaseTypographyProps, Omit<HTMLAttributes<"span">, "color"> {}
+interface Props
+  extends BaseTypographyProps, Omit<HTMLAttributes<"span">, "color"> {}
 
 const {
   tag: Tag = "span",
