--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -9,6 +9,7 @@
 import {getCollection} from "astro:content";
 
 import {BlogList} from "../../components/blog";
+import {JSONLD} from "../../components/seo";
 import Prose from "../../layouts/Prose.astro";
 
 // Fetch all non-draft posts (or all posts in development)
@@ -31,5 +32,6 @@ const posts = allPosts
   description="Writing about AI agents, creative coding, and software engineering."
   heading="Blog"
 >
+  <JSONLD type="Blog" />
   <BlogList slot="before" posts={posts} />
 </Prose>
