--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import {getCollection} from "astro:content";
 
 import {BlogList} from "../components/blog";
 import {Boids, Hero} from "../components/hero";
+import {JSONLD} from "../components/seo";
 import Base from "../layouts/Base.astro";
 
 // Fetch published posts from content collection
@@ -28,6 +29,7 @@ const posts = allPosts
 ---
 
 <Base title="Sam Folorunsho">
+  <JSONLD type="WebSite" />
   <Boids />
   <main class="main-content">
     <Hero />
