--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -125,6 +125,7 @@ const {
       updatedDate={updatedDate}
       tags={tags}
     />
+    <slot name="head" />
 
     <!-- Preload critical fonts -->
     <link
