--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -60,6 +60,7 @@ const {title, description, publishDate, updatedDate, tags} = post.data;
   headingId="post-title"
 >
   <JSONLD
+    slot="head"
     type="BlogPosting"
     article={{
       headline: title,
