--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -32,6 +32,6 @@ const posts = allPosts
   description="Writing about AI agents, creative coding, and software engineering."
   heading="Blog"
 >
-  <JSONLD type="Blog" />
+  <JSONLD slot="head" type="Blog" />
   <BlogList slot="before" posts={posts} />
 </Prose>
