--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const posts = allPosts
 ---
 
 <Base title="Sam Folorunsho">
-  <JSONLD type="WebSite" />
+  <JSONLD slot="head" type="WebSite" />
   <Boids />
   <main class="main-content">
     <Hero />
