refactor: stop trying to be clever; simplify

--- a/src/layouts/Prose.astro
+++ b/src/layouts/Prose.astro
@@ -63,7 +63,6 @@ const {
   seo = {},
   sheenConfig = LARGE_SHEEN,
   headingId = "page-title",
-  headerTransition = {name: "", persist: false},
 } = Astro.props;
 
 const {ogImage, ogType, publishDate, updatedDate, tags} = seo;
@@ -83,11 +82,7 @@ const {ogImage, ogType, publishDate, updatedDate, tags} = seo;
   </Fragment>
   <main class="prose-page">
     <article class="prose-article">
-      <header
-        class="prose-header"
-        transition:name={headerTransition.name}
-        transition:persist={headerTransition.persist}
-      >
+      <header class="prose-header">
         <SheenText
           text={heading}
           tag="h1"
