--- a/src/pages/uses/[tab].astro
+++ b/src/pages/uses/[tab].astro
@@ -88,7 +88,7 @@ const segments: NavigationHeadingSegment[] = [
 const DEFAULT_DESCRIPTION =
   "A curated list of the software, hardware, and tools I use to work efficiently and make the most of my free time.";
 
-const pageTitle = `Uses (${capitalise(validTab)}) | Sam Folorunsho`;
+const pageTitle = `Uses · ${capitalise(validTab)} | Sam Folorunsho`;
 const pageDescription = entry.data.description || DEFAULT_DESCRIPTION;
 ---
 
